--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             </li>
           </ul>
         </nav>
+        <button class="mobile-menu-button"></button>
         <address class="address">
           <ul class="header-cont-list">
             <li class="header-cont-item">
@@ -55,7 +56,7 @@
       </div>
     </header>
     <main>
-      <section class="hero">
+      <section class="hero section">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-button">Order Service</button>
@@ -116,7 +117,7 @@
           </ul>
         </div>
       </section>
-      <section class="team">
+      <section class="team section">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-menu">
@@ -291,7 +292,7 @@
           </ul>
         </div>
       </section>
-      <section class="portfolio">
+      <section class="portfolio section">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-menu">
@@ -576,5 +577,3 @@
     </div>
   </body>
 </html>
-
-ab
