--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
               <img
                 src="./images/img_1.jpg"
                 alt="A man with a beard smiles"
+                srcset="./images/img_1_1x.jpg 1x, ./images/img_1_2x.jpg 2x"
                 width="264"
                 height="260"
               />
@@ -167,6 +168,7 @@
               <img
                 src="./images/img_2.jpg"
                 alt="A man without a beard in blue shirt"
+                srcset="./images/img_2_1x.jpg 1x, ./images/img_2_2x.jpg 2x"
                 width="264"
                 height="260"
               />
@@ -209,6 +211,7 @@
               <img
                 src="./images/img_3.jpg"
                 alt="A women with long hair and pink sweater"
+                srcset="./images/img_3_1x.jpg 1x, ./images/img_3_2x.jpg 2x"
                 width="264"
                 height="260"
               />
@@ -251,6 +254,7 @@
               <img
                 src="./images/img_4.jpg"
                 alt="A man in a white T-shirt"
+                srcset="./images/img_4_1x.jpg 1x, ./images/img_4_2x.jpg 2x"
                 width="264"
                 height="260"
               />
