--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container finalflex">
         <div class="logo-text-wrap">
           <a class="footer-logo" href="./index.html"
             >Web<span class="accent-footer">Studio</span></a
@@ -566,18 +566,84 @@
             <label for="user-privacy" class="form-label"
               ><span class="check-text-icon">
                 <svg class="icon-privacy" width="10" height="8">
-                  <use href="./images/icons.svg#icon-pivacy"></use>
+                  <use href="./images/icons.svg#icon-privacy"></use>
                 </svg> </span
-              >I accept the terms and conditions of the<a
-                href=""
-                class="policy-link"
-                >Privacy Policy</a
+              ><span
+                >I accept the terms and conditions of the<a
+                  href=""
+                  class="policy-link"
+                  >Privacy Policy</a
+                ></span
               ></label
             >
           </div>
           <button class="form-button" type="submit">Send</button>
         </form>
       </div>
+    </div>
+    <div class="mobile-menu">
+      <button type="button" class="close-button">
+        <svg class="close-button-icon" width="8" height="8">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+      <ul class="mobile-menu-list">
+        <li class="mobile-menu-list-item">
+          <a class="mobile-menu-list-link current">Studio</a>
+        </li>
+        <li class="mobile-menu-list-item">
+          <a class="mobile-menu-list-link">Portfolio</a>
+        </li>
+        <li class="mobile-menu-list-item">
+          <a class="mobile-menu-list-link">Contacts</a>
+        </li>
+      </ul>
+      <address class="mobile-menu-adress">
+        <ul class="mobile-menu-adress-list">
+          <li class="mobile-menu-adress-item">
+            <a
+              class="mobile-menu-adress-item-link current"
+              href="+11 (000) 111-11-11"
+              >+11 (000) 111-11-11</a
+            >
+          </li class="mobile-menu-adress-item-link">
+          <li>
+            <a class="mobile-menu-adress-item" href="info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+      </address>
+      <ul class="icon-list-mobile-menu">
+        <li class="icon-item-mobile-menu">
+          <a href="" class="icon-link-mobile-menu">
+            <svg class="icon-icon-mobile-menu" width="24" height="24">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="icon-item-mobile-menu">
+          <a href="" class="icon-link-mobile-menu">
+            <svg class="icon-icon-mobile-menu" width="24" height="24">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="icon-item-mobile-menu">
+          <a href="" class="icon-link-mobile-menu">
+            <svg class="icon-icon-mobile-menu" width="24" height="24">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="icon-item-mobile-menu">
+          <a href="" class="icon-link-mobile-menu">
+            <svg class="icon-icon-mobile-menu" width="24" height="24">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
