--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
             </li>
           </ul>
         </nav>
-        <button class="mobile-menu-button"></button>
+        <button class="mobile-menu-button">
+          <svg class="mobile-menu-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-mobile-menu"></use>
+          </svg>
+        </button>
         <address class="address">
           <ul class="header-cont-list">
             <li class="header-cont-item">
@@ -600,9 +604,9 @@
       </ul>
       <address class="mobile-menu-adress">
         <ul class="mobile-menu-adress-list">
-          <li class="mobile-menu-adress-item">
+          <li class="mobile-menu-adress-item current">
             <a
-              class="mobile-menu-adress-item-link current"
+              class="mobile-menu-adress-item-link"
               href="+11 (000) 111-11-11"
               >+11 (000) 111-11-11</a
             >
