--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
     </header>
     <main>
-      <section class="hero section">
+      <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-button">Order Service</button>
@@ -310,6 +310,7 @@
                   class="menu-img"
                   src="./images/img_portfolio_1.jpg"
                   alt="Banking App"
+                  srcset="./images/img_portfolio_1.jpg 1x, ./images/img_portfolio_1_2x.jpg 2x"
                   width="360"
                   height="300"
                 />
@@ -330,6 +331,7 @@
                   class="menu-img"
                   src="./images/img_portfolio_2.jpg"
                   alt="Cashless Payment"
+                  srcset="./images/img_portfolio_2.jpg 1x, ./images/img_portfolio_2_2x.jpg 2x"
                   width="360"
                   height="300"
                 />
@@ -350,6 +352,7 @@
                   class="menu-img"
                   src="./images/img_portfolio_3.jpg"
                   alt="Meditation App"
+                  srcset="./images/img_portfolio_3.jpg 1x, ./images/img_portfolio_3_2x.jpg 2x"
                   width="360"
                   height="300"
                 />
@@ -370,6 +373,7 @@
                   class="menu-img"
                   src="./images/img_portfolio_4.jpg"
                   alt="Taxi Service"
+                  srcset="./images/img_portfolio_4.jpg 1x, ./images/img_portfolio_4_2x.jpg 2x"
                   width="360"
                   height="300"
                 />
@@ -390,6 +394,7 @@
                   class="menu-img"
                   src="./images/img_portfolio_5.jpg"
                   alt="Screen Illustrations"
+                  srcset="./images/img_portfolio_5.jpg 1x, ./images/img_portfolio_5_2x.jpg 2x"
                   width="360"
                   height="300"
                 />
@@ -410,6 +415,7 @@
                   class="menu-img"
                   src="./images/img_portfolio_6.jpg"
                   alt="Online Courses"
+                  srcset="./images/img_portfolio_6.jpg 1x, ./images/img_portfolio_6_2x.jpg 2x"
                   width="360"
                   height="300"
                 />
